# picotide

./: .gitignore  Cargo.toml  Makefile.toml  README.md
bitsurf/: Cargo.toml
bitsurf/src/: lib.rs
bittide/: Cargo.toml  build.rs
bittide-impls/: Cargo.toml  README.md
bittide-impls/src/: lib.rs
bittide-impls/src/boards/: minsync_v02.rs  mod.rs  pico1_and_si5351.rs  rpi_pico.rs
bittide-impls/src/chips/: rp2040.rs
bittide/src/: bittide.rs  lib.rs
clock_tests/: Cargo.toml  scratchpad.md
clock_tests/.cargo/: config.toml
clock_tests/src/: main.rs  programs.pio
controllers/: Cargo.toml
controllers/src/: controller.rs  fbdiv.rs  lib.rs  pid.rs  si5351.rs
controllers/tests/: si5351.rs
debugging/: Cargo.toml
debugging/src/: debuggers.rs  lib.rs
debugging/src/debuggers/: graph.rs  text.rs
experimental/clock_tests/: Cargo.toml  build.rs  scratchpad.md
experimental/clock_tests/src/: main.rs  programs.pio
experimental/flash_test/: Cargo.toml  memory.x
experimental/flash_test/src/: main.rs
experimental/pico_on_breadboard/: Cargo.toml
experimental/pico_on_breadboard/src/: main.rs
experimental/pitopi/: Cargo.toml
experimental/pitopi/src/: main.rs  programs.pio
experimental/pitopi_test/: Cargo.toml
experimental/pitopi_test/src/: main.rs  programs.pio
installations/: README.md
installations/double_minsync/: Build.toml  Cargo.toml  INSTALLATION.md
installations/double_minsync/src/: main.rs
installations/pico_on_breadboard/: Build.toml  Cargo.toml  INSTALLATION.md  build.rs
installations/pico_on_breadboard/src/: generated_constants.rs  main.rs
minsync/: Cargo.toml  README.md  build.rs
minsync/.cargo/: config.toml
minsync/examples/: blinky.rs  clocks.rs  display.rs  minsync_blinky.rs  smooth_adjust.rs  sweep_frequencies.rs
minsync/src/: clocks.rs  display.rs  lib.rs
multibuild/: Cargo.toml
multibuild/src/: lib.rs
pcbs/: PCBs.md
pcbs/minsync/: README.md  RP2040_minimal_r2.kicad_pcb  RP2040_minimal_r2.kicad_prl  RP2040_minimal_r2.kicad_pro  RP2040_minimal_r2.kicad_sch  RP2040_minimal_r2.xml  fp-info-cache  sym-lib-table
pcbs/minsync/RP2040_minimal_r2.pretty/: HRS_BM23FR0.6-6DP-0.35V_51_.kicad_mod  HRS_BM23FR0.6-6DS-0.35V_51_.kicad_mod  TS-1187A-PushButton.kicad_mod  pitopi_and_power.kicad_mod
pcbs/minsync/minsync-v0.1/: RP2040_minimal_r2-bom-checked.csv  RP2040_minimal_r2-top-pos-checked.csv
pcbs/minsync/minsync-v0.1/gerbers/: RP2040_minimal_r2-B_Cu.gbl  RP2040_minimal_r2-B_Mask.gbs  RP2040_minimal_r2-B_Paste.gbp  RP2040_minimal_r2-B_Silkscreen.gbo  RP2040_minimal_r2-Edge_Cuts.gm1  RP2040_minimal_r2-F_Cu.gtl  RP2040_minimal_r2-F_Mask.gts  RP2040_minimal_r2-F_Paste.gtp  RP2040_minimal_r2-F_Silkscreen.gto  RP2040_minimal_r2-NPTH.drl  RP2040_minimal_r2-PTH.drl
pcbs/minsync/minsync-v0.2/: RP2040_minimal_r2-B_Cu.gbl  RP2040_minimal_r2-B_Mask.gbs  RP2040_minimal_r2-B_Paste.gbp  RP2040_minimal_r2-B_Silkscreen.gbo  RP2040_minimal_r2-Edge_Cuts.gm1  RP2040_minimal_r2-F_Cu.gtl  RP2040_minimal_r2-F_Mask.gts  RP2040_minimal_r2-F_Paste.gtp  RP2040_minimal_r2-F_Silkscreen.gto  RP2040_minimal_r2-NPTH.drl  RP2040_minimal_r2-PTH.drl  RP2040_minimal_r2-all-pos-checked.csv  RP2040_minimal_r2_BOM-checked.csv
pcbs/minsync_connect/: fp-info-cache  fp-lib-table  minsync_connect.kicad_pcb  minsync_connect.kicad_prl  minsync_connect.kicad_pro  minsync_connect.kicad_sch
pcbs/minsync_connect/minsync_connect-v0.1/gerbers/: minsync_connect-B_Cu.gbl  minsync_connect-B_Mask.gbs  minsync_connect-B_Paste.gbp  minsync_connect-B_Silkscreen.gbo  minsync_connect-Edge_Cuts.gm1  minsync_connect-F_Cu.gtl  minsync_connect-F_Mask.gts  minsync_connect-F_Paste.gtp  minsync_connect-F_Silkscreen.gto  minsync_connect-NPTH.drl  minsync_connect-PTH.drl
pcbs/multiprobe/: fp-info-cache  fp-lib-table  multiprobe.kicad_pcb  multiprobe.kicad_prl  multiprobe.kicad_pro  multiprobe.kicad_sch  sym-lib-table
pcbs/multiprobe/multiprobe.pretty/: RPi_Pico_SMD.kicad_mod  SWD.kicad_mod
pcbs/symbols/: BM23FR0.6-6DP-0.35V_51_.kicad_sym  BM23FR0.6-6DS-0.35V_51_.kicad_sym
pitopi/: Cargo.toml
pitopi/src/: lib.rs  main.rs  programs.pio
scripts/: Cargo.toml
scripts/src/: flash.rs  lib.rs  usb.rs
surf/: Cargo.toml  IDEAS.md
surf/examples/fir/: Cargo.toml
surf/examples/fir/src/: fir.rs  main.rs
surf/examples/monte_carlo/: Cargo.toml
surf/examples/monte_carlo/src/: main.rs  state_machines.rs
surf/examples/monte_carlo/src/state_machines/: aggregrate.rs  aggregrate_m.rs  monte_carlo.rs  monte_carlo_m.rs  sum_four.rs  sum_four_m.rs
surf/src/: lib.rs
surf/surf-lang/: Cargo.toml
surf/surf-lang/src/: lib.rs  node.rs  program.rs  state_machine.rs
surf/surf-lang/src/pitopi_minsync/: links.rs  mod.rs  node.rs  serde.rs
surf/surf-lang/src/state_machine/: generic.rs  generic_old.rs
surf/surf-lang/src/test/: mod.rs  runner.rs
surf/surf-proc/: Cargo.toml
surf/surf-proc/src/: lib.rs
tide/: Cargo.toml
tide/src/: lib.rs  pico_setup.rs  tide.rs
