
[workspace]
resolver = "2"

members = [
    "scripts",
    "experimental/*",
    "installations/*",
    "pitopi",
    "controllers",
    "bittide",
    "bittide-impls",
    "multibuild",
    "minsync",
    "surf/surf-lang",
    "surf/examples/*", "surf/surf-proc",
]

[workspace.package]
rust-version = "1.81"
