
[workspace]
resolver = "2"

members = [
    "scripts",
    "experimental/*",
    "installations/*",
    "pitopi",
    "controllers",
    "bittide",
    "bittide-impls",
    "multibuild",
    "minsync",
    "surf/surf-proc",
    "surf/surf-lang",
    "surf/examples/*", "debugging",
]

[workspace.package]
rust-version = "1.81"
