[package]
name = "bittide-impls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rp-pico = { version = "0.8.0", default-features = false, features = ["rt", "critical-section-impl", "rom-func-cache"] }
rp-pico = { git = "https://github.com/PietPtr/rp-hal-boards", branch = "main" }
heapless = { version = "0.8.0", features = ["defmt-03"] }
controllers = { path = "../controllers" }
bittide = { path = "../bittide" }
cortex-m = "0.7"