[package]
name = "clock_tests"
version = "0.1.0"
edition = "2021"
description = "Very minimal rpi pico project for testing things in isolation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
log = "0.4.22"
defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = { version = "0.8.0", default-features = false, features = ["rt", "critical-section-impl", "rom-func-cache"] }
fugit = "0.3.7"
rp2040-boot2 = "0.2.1"
pio-proc = "0.2.2"
pio = "0.2.1"

[features]
benchmark = []
