[package]
name = "controllers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rp-pico = { git = "https://github.com/PietPtr/rp-hal-boards", branch = "main" }
fixed = "=1.27.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
defmt = "0.3.5"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
si5351 = "0.2.0"
log = "0.4.27"

[dev-dependencies]
tracing = "0.1.41"
# env_logger = "0.11.8"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# pretty_env_logger = "0.5.0"
