[package]
name = "debugging"
version = "0.1.0"
edition = "2021"
rust-version.workspace = true

[dependencies]
bittide = { version = "0.1.0", path = "../bittide" }
controllers = { version = "0.1.0", path = "../controllers" }
defmt = "1.0.1"
embedded-graphics = "0.8.1"
heapless = "0.8.0"
itoa = "1.0.15"
minsync = { version = "0.1.0", path = "../minsync" }
