[package]
name = "minsync"
version = "0.1.0"
edition = "2018"
description = "Board Support Package for the minsync PCB"

[dependencies]
cortex-m-rt = { version = "0.7.3", optional = true }
embedded-graphics = "0.8.1"
fugit = "0.3.7"
rp2040-boot2 = { version = "0.2.1", optional = true }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal", rev = "2deb017b7aa5dad3f644614bec2f3710bdb7b9f3", package = "rp2040-hal", features = [
    "defmt",
] }
sh1106 = "0.5.0"
usb-device = "0.3.1"

[dev-dependencies]
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-hal = { version = "0.2.7", features = ["unproven"] }
cortex-m = "0.7"
si5351 = "0.2.0"
defmt = "0.3.5"
defmt-rtt = "0.4"

[features]
# This is the set of features we enable by default
default = ["boot2", "rt", "critical-section-impl", "rom-func-cache"]

# critical section that is safe for multicore use
critical-section-impl = ["rp2040-hal/critical-section-impl"]

# 2nd stage bootloaders for rp2040
boot2 = ["rp2040-boot2"]

# Minimal startup / runtime for Cortex-M microcontrollers
rt = ["cortex-m-rt", "rp2040-hal/rt"]

# This enables a fix for USB errata 5: USB device fails to exit RESET state on busy USB bus.
# Only required for RP2040 B0 and RP2040 B1, but it also works for RP2040 B2 and above
rp2040-e5 = ["rp2040-hal/rp2040-e5"]

# Memoize(cache) ROM function pointers on first use to improve performance
rom-func-cache = ["rp2040-hal/rom-func-cache"]

# Disable automatic mapping of language features (like floating point math) to ROM functions
disable-intrinsics = ["rp2040-hal/disable-intrinsics"]

# This enables ROM functions for f64 math that were not present in the earliest RP2040s
rom-v2-intrinsics = ["rp2040-hal/rom-v2-intrinsics"]
