[package]
name = "pitopi"
version = "0.1.0"
edition = "2021"
description = "Extremely simplistic 3-wire communication protocol implemented on PIO"

# TODO: clean up unecessary stuff
[dependencies]
rp-pico = { git = "https://github.com/PietPtr/rp-hal-boards", branch = "main" }
pio-proc = "0.2.2"
pio = "0.2.1"

