[package]
name = "pitopi_test"
version = "0.1.0"
edition = "2021"
description = "Demo and test bed of pico to pico communication over custom PIO based protocol."

# TODO: turn this into a library crate

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
log = "0.4.22"
defmt = "0.3.5"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
# rp-pico = { version = "0.8.0", default-features = false, features = ["rt", "critical-section-impl", "rom-func-cache"] }
rp-pico = { git = "https://github.com/PietPtr/rp-hal-boards", branch = "main" }
fugit = "0.3.7"
rp2040-boot2 = "0.2.1"
pio-proc = "0.2.2"
pio = "0.2.1"
critical-section = "1.2.0"
heapless = { version = "0.8.0", features = ["defmt-03"] }
controllers = { path = "../../controllers" }
bittide = { path = "../../bittide" }
bittide-impls = { path = "../../bittide-impls" }
fixed = "=1.27.0"
si5351 = "0.2.0"
